[tool.poetry]
name = "mansion"
version = "0.1.0"
description = "A text-based horror adventure game."
authors = ["interyx <jluensma@asu.edu>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.10"
parsimonious = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
